// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`rendered layer (golden) shared platform default 1`] = `
"# syntax=docker/dockerfile:1.7
# Kortix platform default sandbox base.
# Sessions clone the project workspace at boot — nothing project-specific
# is baked in here. Customize via \`sandbox.templates\` in kortix.yaml.
FROM ubuntu:24.04

WORKDIR /workspace

# ─── Kortix runtime layer (auto-injected) ──────────────────────────
# Everything below is added by the Kortix snapshot builder. Do not
# edit by hand — your project Dockerfile above is preserved verbatim.

USER root
ENV DEBIAN_FRONTEND=noninteractive
RUN apt-get update \\
    && apt-get install -y --no-install-recommends \\
        ca-certificates curl git gzip libatomic1 sudo unzip tmux iproute2 iputils-arping \\
        build-essential ffmpeg fonts-dejavu fonts-liberation fonts-noto fonts-noto-cjk \\
        latexmk libreoffice pandoc pkg-config poppler-utils qpdf tesseract-ocr \\
        texlive-bibtex-extra texlive-fonts-recommended texlive-latex-base \\
        texlive-latex-extra texlive-latex-recommended \\
    && rm -rf /var/lib/apt/lists/*

RUN useradd --create-home --shell /bin/bash --user-group kortix \\
    && printf 'kortix ALL=(ALL) NOPASSWD:ALL\\n' > /etc/sudoers.d/kortix \\
    && chmod 0440 /etc/sudoers.d/kortix \\
    && mkdir -p /workspace /opt/kortix /opt/pw-browsers /ephemeral/kortix-master/opencode \\
    && chown -R kortix:kortix /workspace /opt/kortix /opt/pw-browsers /ephemeral
ENV PATH=/home/kortix/.local/bin:/home/kortix/.local/share/pnpm/bin:/home/kortix/.venv/bin:/home/kortix/.bun/bin:$PATH
USER kortix

RUN curl -LsSf https://astral.sh/uv/0.11.30/install.sh | sh \\
    && uv --version \\
    && UV_PYTHON_DOWNLOADS=automatic uv python install 3.12.13 \\
    && UV_PYTHON_DOWNLOADS=never uv venv --seed --python 3.12.13 /home/kortix/.venv \\
    && python -c 'import sys; assert sys.version_info[:3] == (3, 12, 13); print("managed python:", sys.version)'

# Starter skill Python package floor (document/data/PDF/presentation helpers).
# Installed into the uv-created, uv-managed Python environment.
RUN uv pip install --python /home/kortix/.venv/bin/python --no-cache \\
        "beautifulsoup4>=4.12" \\
        "lxml>=5" \\
        "markdownify>=0.13" \\
        "markitdown[pptx]>=0.1.0" \\
        "matplotlib>=3.8" \\
        "numpy>=1.26" \\
        "openpyxl>=3.1" \\
        "pandas>=2.2" \\
        "pdf2docx>=0.5" \\
        "pdf2image>=1.17" \\
        "pdfplumber>=0.11" \\
        "pillow>=10" \\
        "playwright>=1.58" \\
        "plotly>=5.22" \\
        "pymupdf>=1.24" \\
        "pypdf>=4" \\
        "pypdfium2>=4.30" \\
        "pytesseract>=0.3" \\
        "python-docx>=1.1" \\
        "python-pptx>=1.0" \\
        "reportlab>=4.2" \\
        "requests>=2.32" \\
        "scikit-learn>=1.4" \\
        "scipy>=1.12" \\
        "seaborn>=0.13" \\
        "youtube-transcript-api>=0.6" \\
    && python -c 'import importlib; [importlib.import_module(m) for m in ["bs4", "lxml", "markitdown", "matplotlib", "numpy", "openpyxl", "pandas", "pdf2docx", "pdf2image", "pdfplumber", "PIL", "playwright", "plotly", "fitz", "pypdf", "pypdfium2", "pytesseract", "docx", "pptx", "reportlab", "requests", "sklearn", "scipy", "seaborn", "youtube_transcript_api"]]; print("starter Python package floor OK")'

ENV PNPM_VERSION=11.15.1 \\
    SHELL=/bin/bash
RUN curl -fsSL https://get.pnpm.io/install.sh | sh - \\
    && pnpm --version \\
    && pnpm runtime set node 22.23.1 -g \\
    && node --version \\
    && pnpm add -g "npm@12.0.1" \\
    && npm --version

ENV PLAYWRIGHT_BROWSERS_PATH=/opt/pw-browsers \\
    AGENT_BROWSER_EXECUTABLE_PATH=/home/kortix/.local/bin/chromium \\
    AGENT_BROWSER_ARGS=--no-sandbox,--disable-dev-shm-usage \\
    PLAYWRIGHT_DOWNLOAD_CONNECTION_TIMEOUT=1800000
RUN pnpm add -g --allow-build=agent-browser "agent-browser@0.27.0" \\
    && agent-browser --version \\
    && for pw_try in 1 2 3 4 5; do \\
        pnpm dlx playwright@1.60.0 install --with-deps chromium && break; \\
        echo "playwright chromium install attempt $pw_try failed, retrying..."; \\
        sleep $((pw_try*10)); \\
    done \\
    && sudo rm -rf /var/lib/apt/lists/* \\
    && pw_chrome="$(find /opt/pw-browsers -type f -path '*chrome-linux*/chrome' | head -n1)" \\
    && test -n "$pw_chrome" \\
    && ln -sf "$pw_chrome" /home/kortix/.local/bin/chromium \\
    && mkdir -p /home/kortix/.agent-browser/browsers \\
    && ln -sf "$(dirname "$pw_chrome")" /home/kortix/.agent-browser/browsers/chrome-linux64 \\
    && chromium --version \\
    && env -u AGENT_BROWSER_EXECUTABLE_PATH agent-browser doctor 2>&1 | grep -qE 'pass.+chrome-linux64/chrome'

RUN pnpm add -g --allow-build=opencode-ai "opencode-ai@1.17.11" \\
    && command -v opencode \\
    && opencode --version

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup migration; rm -f /tmp/kortix-opencode-warmup

RUN curl -fsSL https://bun.com/install | bash \\
    && bun --version

RUN mkdir -p /opt/kortix/opencode-config-deps \\
    && cd /opt/kortix/opencode-config-deps \\
    && printf '{"name":"kortix-opencode-config","private":true,"dependencies":{"@mendable/firecrawl-js":"^4.25.1","@opencode-ai/plugin":"1.17.11","@tavily/core":"^0.7.3","replicate":"^1.4.0"},"overrides":{"axios":"1.16.0","form-data":"4.0.6"}}' > package.json \\
    && bun install

RUN cd /opt/kortix/opencode-config-deps \\
    && bun build node_modules/axios/lib/utils.js node_modules/form-data/lib/form_data.js --target=bun --outdir=/tmp/opencode-deps-bundle-check \\
    && rm -rf /tmp/opencode-deps-bundle-check \\
    && echo "opencode-config-deps: baked tree bundles cleanly"

COPY --chown=kortix:kortix kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup instance wipe; rm -f /tmp/kortix-opencode-warmup

USER root
COPY kortix-agent.gz /tmp/kortix-agent.gz
COPY kortix.gz /tmp/kortix.gz
COPY kortix-entrypoint /usr/local/bin/kortix-entrypoint
COPY MACHINE.md /MACHINE.md
COPY kortix-slack-cli/ /opt/kortix/apps/sandbox/slack-cli/
COPY kortix-executor-sdk/ /opt/kortix/packages/executor-sdk/
COPY kortix-llm-catalog.json /opt/kortix/llm-catalog.json
COPY scaffold.git /opt/kortix/scaffold.git
RUN gunzip -c /tmp/kortix-agent.gz > /usr/local/bin/kortix-agent \\
    && gunzip -c /tmp/kortix.gz > /usr/local/bin/kortix \\
    && rm /tmp/kortix-agent.gz /tmp/kortix.gz \\
    && bash -n /usr/local/bin/kortix-entrypoint \\
    && chmod +x /usr/local/bin/kortix-agent /usr/local/bin/kortix /usr/local/bin/kortix-entrypoint \\
        /opt/kortix/apps/sandbox/slack-cli/install-shims.sh \\
    && bash /opt/kortix/apps/sandbox/slack-cli/install-shims.sh /opt/kortix/apps/sandbox/slack-cli \\
    && kortix --version \\
    && chown -R kortix:kortix /opt/kortix /workspace /ephemeral

ENV KORTIX_WORKSPACE=/workspace
USER kortix
WORKDIR /workspace
EXPOSE 8000
ENTRYPOINT ["/usr/local/bin/kortix-entrypoint"]
"
`;

exports[`rendered layer (golden) custom template (user seeds /workspace) 1`] = `
"FROM ubuntu:24.04

RUN apt-get update && apt-get install -y --no-install-recommends gdal-bin

WORKDIR /workspace
RUN mkdir -p /workspace/data && echo seed > /workspace/data/basemap.tif

# ─── Kortix runtime layer (auto-injected) ──────────────────────────
# Everything below is added by the Kortix snapshot builder. Do not
# edit by hand — your project Dockerfile above is preserved verbatim.

USER root
ENV DEBIAN_FRONTEND=noninteractive
RUN apt-get update \\
    && apt-get install -y --no-install-recommends \\
        ca-certificates curl git gzip libatomic1 sudo unzip tmux iproute2 iputils-arping \\
        build-essential ffmpeg fonts-dejavu fonts-liberation fonts-noto fonts-noto-cjk \\
        latexmk libreoffice pandoc pkg-config poppler-utils qpdf tesseract-ocr \\
        texlive-bibtex-extra texlive-fonts-recommended texlive-latex-base \\
        texlive-latex-extra texlive-latex-recommended \\
    && rm -rf /var/lib/apt/lists/*

RUN useradd --create-home --shell /bin/bash --user-group kortix \\
    && printf 'kortix ALL=(ALL) NOPASSWD:ALL\\n' > /etc/sudoers.d/kortix \\
    && chmod 0440 /etc/sudoers.d/kortix \\
    && mkdir -p /workspace /opt/kortix /opt/pw-browsers /ephemeral/kortix-master/opencode \\
    && chown -R kortix:kortix /workspace /opt/kortix /opt/pw-browsers /ephemeral
ENV PATH=/home/kortix/.local/bin:/home/kortix/.local/share/pnpm/bin:/home/kortix/.venv/bin:/home/kortix/.bun/bin:$PATH
USER kortix

RUN curl -LsSf https://astral.sh/uv/0.11.30/install.sh | sh \\
    && uv --version \\
    && UV_PYTHON_DOWNLOADS=automatic uv python install 3.12.13 \\
    && UV_PYTHON_DOWNLOADS=never uv venv --seed --python 3.12.13 /home/kortix/.venv \\
    && python -c 'import sys; assert sys.version_info[:3] == (3, 12, 13); print("managed python:", sys.version)'

# Starter skill Python package floor (document/data/PDF/presentation helpers).
# Installed into the uv-created, uv-managed Python environment.
RUN uv pip install --python /home/kortix/.venv/bin/python --no-cache \\
        "beautifulsoup4>=4.12" \\
        "lxml>=5" \\
        "markdownify>=0.13" \\
        "markitdown[pptx]>=0.1.0" \\
        "matplotlib>=3.8" \\
        "numpy>=1.26" \\
        "openpyxl>=3.1" \\
        "pandas>=2.2" \\
        "pdf2docx>=0.5" \\
        "pdf2image>=1.17" \\
        "pdfplumber>=0.11" \\
        "pillow>=10" \\
        "playwright>=1.58" \\
        "plotly>=5.22" \\
        "pymupdf>=1.24" \\
        "pypdf>=4" \\
        "pypdfium2>=4.30" \\
        "pytesseract>=0.3" \\
        "python-docx>=1.1" \\
        "python-pptx>=1.0" \\
        "reportlab>=4.2" \\
        "requests>=2.32" \\
        "scikit-learn>=1.4" \\
        "scipy>=1.12" \\
        "seaborn>=0.13" \\
        "youtube-transcript-api>=0.6" \\
    && python -c 'import importlib; [importlib.import_module(m) for m in ["bs4", "lxml", "markitdown", "matplotlib", "numpy", "openpyxl", "pandas", "pdf2docx", "pdf2image", "pdfplumber", "PIL", "playwright", "plotly", "fitz", "pypdf", "pypdfium2", "pytesseract", "docx", "pptx", "reportlab", "requests", "sklearn", "scipy", "seaborn", "youtube_transcript_api"]]; print("starter Python package floor OK")'

ENV PNPM_VERSION=11.15.1 \\
    SHELL=/bin/bash
RUN curl -fsSL https://get.pnpm.io/install.sh | sh - \\
    && pnpm --version \\
    && pnpm runtime set node 22.23.1 -g \\
    && node --version \\
    && pnpm add -g "npm@12.0.1" \\
    && npm --version

ENV PLAYWRIGHT_BROWSERS_PATH=/opt/pw-browsers \\
    AGENT_BROWSER_EXECUTABLE_PATH=/home/kortix/.local/bin/chromium \\
    AGENT_BROWSER_ARGS=--no-sandbox,--disable-dev-shm-usage \\
    PLAYWRIGHT_DOWNLOAD_CONNECTION_TIMEOUT=1800000
RUN pnpm add -g --allow-build=agent-browser "agent-browser@0.27.0" \\
    && agent-browser --version \\
    && for pw_try in 1 2 3 4 5; do \\
        pnpm dlx playwright@1.60.0 install --with-deps chromium && break; \\
        echo "playwright chromium install attempt $pw_try failed, retrying..."; \\
        sleep $((pw_try*10)); \\
    done \\
    && sudo rm -rf /var/lib/apt/lists/* \\
    && pw_chrome="$(find /opt/pw-browsers -type f -path '*chrome-linux*/chrome' | head -n1)" \\
    && test -n "$pw_chrome" \\
    && ln -sf "$pw_chrome" /home/kortix/.local/bin/chromium \\
    && mkdir -p /home/kortix/.agent-browser/browsers \\
    && ln -sf "$(dirname "$pw_chrome")" /home/kortix/.agent-browser/browsers/chrome-linux64 \\
    && chromium --version \\
    && env -u AGENT_BROWSER_EXECUTABLE_PATH agent-browser doctor 2>&1 | grep -qE 'pass.+chrome-linux64/chrome'

RUN pnpm add -g --allow-build=opencode-ai "opencode-ai@1.17.11" \\
    && command -v opencode \\
    && opencode --version

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup migration; rm -f /tmp/kortix-opencode-warmup

RUN curl -fsSL https://bun.com/install | bash \\
    && bun --version

RUN mkdir -p /opt/kortix/opencode-config-deps \\
    && cd /opt/kortix/opencode-config-deps \\
    && printf '{"name":"kortix-opencode-config","private":true,"dependencies":{"@mendable/firecrawl-js":"^4.25.1","@opencode-ai/plugin":"1.17.11","@tavily/core":"^0.7.3","replicate":"^1.4.0"},"overrides":{"axios":"1.16.0","form-data":"4.0.6"}}' > package.json \\
    && bun install

RUN cd /opt/kortix/opencode-config-deps \\
    && bun build node_modules/axios/lib/utils.js node_modules/form-data/lib/form_data.js --target=bun --outdir=/tmp/opencode-deps-bundle-check \\
    && rm -rf /tmp/opencode-deps-bundle-check \\
    && echo "opencode-config-deps: baked tree bundles cleanly"

COPY --chown=kortix:kortix kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup instance targeted; rm -f /tmp/kortix-opencode-warmup

USER root
COPY kortix-agent.gz /tmp/kortix-agent.gz
COPY kortix.gz /tmp/kortix.gz
COPY kortix-entrypoint /usr/local/bin/kortix-entrypoint
COPY MACHINE.md /MACHINE.md
COPY kortix-slack-cli/ /opt/kortix/apps/sandbox/slack-cli/
COPY kortix-executor-sdk/ /opt/kortix/packages/executor-sdk/
COPY kortix-llm-catalog.json /opt/kortix/llm-catalog.json
COPY scaffold.git /opt/kortix/scaffold.git
RUN gunzip -c /tmp/kortix-agent.gz > /usr/local/bin/kortix-agent \\
    && gunzip -c /tmp/kortix.gz > /usr/local/bin/kortix \\
    && rm /tmp/kortix-agent.gz /tmp/kortix.gz \\
    && bash -n /usr/local/bin/kortix-entrypoint \\
    && chmod +x /usr/local/bin/kortix-agent /usr/local/bin/kortix /usr/local/bin/kortix-entrypoint \\
        /opt/kortix/apps/sandbox/slack-cli/install-shims.sh \\
    && bash /opt/kortix/apps/sandbox/slack-cli/install-shims.sh /opt/kortix/apps/sandbox/slack-cli \\
    && kortix --version \\
    && chown -R kortix:kortix /opt/kortix /workspace /ephemeral

ENV KORTIX_WORKSPACE=/workspace
USER kortix
WORKDIR /workspace
EXPOSE 8000
ENTRYPOINT ["/usr/local/bin/kortix-entrypoint"]
"
`;

exports[`rendered layer (golden) per-project cold warm (warmRepo) 1`] = `
"# syntax=docker/dockerfile:1.7
# Kortix platform default sandbox base.
# Sessions clone the project workspace at boot — nothing project-specific
# is baked in here. Customize via \`sandbox.templates\` in kortix.yaml.
FROM ubuntu:24.04

WORKDIR /workspace

# ─── Kortix runtime layer (auto-injected) ──────────────────────────
# Everything below is added by the Kortix snapshot builder. Do not
# edit by hand — your project Dockerfile above is preserved verbatim.

USER root
ENV DEBIAN_FRONTEND=noninteractive
RUN apt-get update \\
    && apt-get install -y --no-install-recommends \\
        ca-certificates curl git gzip libatomic1 sudo unzip tmux iproute2 iputils-arping \\
        build-essential ffmpeg fonts-dejavu fonts-liberation fonts-noto fonts-noto-cjk \\
        latexmk libreoffice pandoc pkg-config poppler-utils qpdf tesseract-ocr \\
        texlive-bibtex-extra texlive-fonts-recommended texlive-latex-base \\
        texlive-latex-extra texlive-latex-recommended \\
    && rm -rf /var/lib/apt/lists/*

RUN useradd --create-home --shell /bin/bash --user-group kortix \\
    && printf 'kortix ALL=(ALL) NOPASSWD:ALL\\n' > /etc/sudoers.d/kortix \\
    && chmod 0440 /etc/sudoers.d/kortix \\
    && mkdir -p /workspace /opt/kortix /opt/pw-browsers /ephemeral/kortix-master/opencode \\
    && chown -R kortix:kortix /workspace /opt/kortix /opt/pw-browsers /ephemeral
ENV PATH=/home/kortix/.local/bin:/home/kortix/.local/share/pnpm/bin:/home/kortix/.venv/bin:/home/kortix/.bun/bin:$PATH
USER kortix

RUN curl -LsSf https://astral.sh/uv/0.11.30/install.sh | sh \\
    && uv --version \\
    && UV_PYTHON_DOWNLOADS=automatic uv python install 3.12.13 \\
    && UV_PYTHON_DOWNLOADS=never uv venv --seed --python 3.12.13 /home/kortix/.venv \\
    && python -c 'import sys; assert sys.version_info[:3] == (3, 12, 13); print("managed python:", sys.version)'

# Starter skill Python package floor (document/data/PDF/presentation helpers).
# Installed into the uv-created, uv-managed Python environment.
RUN uv pip install --python /home/kortix/.venv/bin/python --no-cache \\
        "beautifulsoup4>=4.12" \\
        "lxml>=5" \\
        "markdownify>=0.13" \\
        "markitdown[pptx]>=0.1.0" \\
        "matplotlib>=3.8" \\
        "numpy>=1.26" \\
        "openpyxl>=3.1" \\
        "pandas>=2.2" \\
        "pdf2docx>=0.5" \\
        "pdf2image>=1.17" \\
        "pdfplumber>=0.11" \\
        "pillow>=10" \\
        "playwright>=1.58" \\
        "plotly>=5.22" \\
        "pymupdf>=1.24" \\
        "pypdf>=4" \\
        "pypdfium2>=4.30" \\
        "pytesseract>=0.3" \\
        "python-docx>=1.1" \\
        "python-pptx>=1.0" \\
        "reportlab>=4.2" \\
        "requests>=2.32" \\
        "scikit-learn>=1.4" \\
        "scipy>=1.12" \\
        "seaborn>=0.13" \\
        "youtube-transcript-api>=0.6" \\
    && python -c 'import importlib; [importlib.import_module(m) for m in ["bs4", "lxml", "markitdown", "matplotlib", "numpy", "openpyxl", "pandas", "pdf2docx", "pdf2image", "pdfplumber", "PIL", "playwright", "plotly", "fitz", "pypdf", "pypdfium2", "pytesseract", "docx", "pptx", "reportlab", "requests", "sklearn", "scipy", "seaborn", "youtube_transcript_api"]]; print("starter Python package floor OK")'

ENV PNPM_VERSION=11.15.1 \\
    SHELL=/bin/bash
RUN curl -fsSL https://get.pnpm.io/install.sh | sh - \\
    && pnpm --version \\
    && pnpm runtime set node 22.23.1 -g \\
    && node --version \\
    && pnpm add -g "npm@12.0.1" \\
    && npm --version

ENV PLAYWRIGHT_BROWSERS_PATH=/opt/pw-browsers \\
    AGENT_BROWSER_EXECUTABLE_PATH=/home/kortix/.local/bin/chromium \\
    AGENT_BROWSER_ARGS=--no-sandbox,--disable-dev-shm-usage \\
    PLAYWRIGHT_DOWNLOAD_CONNECTION_TIMEOUT=1800000
RUN pnpm add -g --allow-build=agent-browser "agent-browser@0.27.0" \\
    && agent-browser --version \\
    && for pw_try in 1 2 3 4 5; do \\
        pnpm dlx playwright@1.60.0 install --with-deps chromium && break; \\
        echo "playwright chromium install attempt $pw_try failed, retrying..."; \\
        sleep $((pw_try*10)); \\
    done \\
    && sudo rm -rf /var/lib/apt/lists/* \\
    && pw_chrome="$(find /opt/pw-browsers -type f -path '*chrome-linux*/chrome' | head -n1)" \\
    && test -n "$pw_chrome" \\
    && ln -sf "$pw_chrome" /home/kortix/.local/bin/chromium \\
    && mkdir -p /home/kortix/.agent-browser/browsers \\
    && ln -sf "$(dirname "$pw_chrome")" /home/kortix/.agent-browser/browsers/chrome-linux64 \\
    && chromium --version \\
    && env -u AGENT_BROWSER_EXECUTABLE_PATH agent-browser doctor 2>&1 | grep -qE 'pass.+chrome-linux64/chrome'

RUN pnpm add -g --allow-build=opencode-ai "opencode-ai@1.17.11" \\
    && command -v opencode \\
    && opencode --version

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup migration; rm -f /tmp/kortix-opencode-warmup

RUN curl -fsSL https://bun.com/install | bash \\
    && bun --version

RUN mkdir -p /opt/kortix/opencode-config-deps \\
    && cd /opt/kortix/opencode-config-deps \\
    && printf '{"name":"kortix-opencode-config","private":true,"dependencies":{"@mendable/firecrawl-js":"^4.25.1","@opencode-ai/plugin":"1.17.11","@tavily/core":"^0.7.3","replicate":"^1.4.0"},"overrides":{"axios":"1.16.0","form-data":"4.0.6"}}' > package.json \\
    && bun install

RUN cd /opt/kortix/opencode-config-deps \\
    && bun build node_modules/axios/lib/utils.js node_modules/form-data/lib/form_data.js --target=bun --outdir=/tmp/opencode-deps-bundle-check \\
    && rm -rf /tmp/opencode-deps-bundle-check \\
    && echo "opencode-config-deps: baked tree bundles cleanly"


# ─── Per-project COLD warm: bake repo checkout into /workspace ──────
RUN cd / \\
    && rm -rf /tmp/kortix-warm-repo && mkdir -p /tmp/kortix-warm-repo /workspace \\
    && git -c http.extraHeader='Authorization: Bearer redacted' clone --depth 1 --branch 'main' 'https://git.example.com/acme/app.git' /tmp/kortix-warm-repo \\
    && find /workspace -mindepth 1 -maxdepth 1 -exec rm -rf {} + \\
    && (shopt -s dotglob 2>/dev/null || true) && cp -a /tmp/kortix-warm-repo/. /workspace/ \\
    && rm -rf /tmp/kortix-warm-repo \\
    && git -C /workspace remote set-url origin 'https://kortix.example.com/v1/git/proj.git' \\
    && echo "warm-repo: baked $(git -C /workspace rev-parse HEAD) on main"

COPY --chown=kortix:kortix kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup instance keep; rm -f /tmp/kortix-opencode-warmup

USER root
COPY kortix-agent.gz /tmp/kortix-agent.gz
COPY kortix.gz /tmp/kortix.gz
COPY kortix-entrypoint /usr/local/bin/kortix-entrypoint
COPY MACHINE.md /MACHINE.md
COPY kortix-slack-cli/ /opt/kortix/apps/sandbox/slack-cli/
COPY kortix-executor-sdk/ /opt/kortix/packages/executor-sdk/
COPY kortix-llm-catalog.json /opt/kortix/llm-catalog.json
COPY scaffold.git /opt/kortix/scaffold.git
RUN gunzip -c /tmp/kortix-agent.gz > /usr/local/bin/kortix-agent \\
    && gunzip -c /tmp/kortix.gz > /usr/local/bin/kortix \\
    && rm /tmp/kortix-agent.gz /tmp/kortix.gz \\
    && bash -n /usr/local/bin/kortix-entrypoint \\
    && chmod +x /usr/local/bin/kortix-agent /usr/local/bin/kortix /usr/local/bin/kortix-entrypoint \\
        /opt/kortix/apps/sandbox/slack-cli/install-shims.sh \\
    && bash /opt/kortix/apps/sandbox/slack-cli/install-shims.sh /opt/kortix/apps/sandbox/slack-cli \\
    && kortix --version \\
    && chown -R kortix:kortix /opt/kortix /workspace /ephemeral

ENV KORTIX_WORKSPACE=/workspace
USER kortix
WORKDIR /workspace
EXPOSE 8000
ENTRYPOINT ["/usr/local/bin/kortix-entrypoint"]
"
`;

exports[`buildPerProjectWarmFromBaseDockerfile (FROM-base fast path) golden 1`] = `
"FROM registry.daytona.internal/kortix-default-abc123:latest

# ─── Per-project COLD warm (FROM-base fast path, auto-injected) ─────
# Everything above this line is INHERITED from the already-built default
# runtime image (apt/pip/opencode/bun/agent-browser + Chromium are already
# baked in) — nothing below re-installs any of it. This is what makes the
# Chromium install a guaranteed inherit instead of an opportunistic
# build-cache hit. Do not add toolchain RUNs here — they belong in
# kortixToolchainLayer, which this stage deliberately skips.

USER kortix

# ─── Per-project COLD warm: bake repo checkout into /workspace ──────
RUN cd / \\
    && rm -rf /tmp/kortix-warm-repo && mkdir -p /tmp/kortix-warm-repo /workspace \\
    && git -c http.extraHeader='Authorization: Bearer redacted' clone --depth 1 --branch 'main' 'https://git.example.com/acme/app.git' /tmp/kortix-warm-repo \\
    && find /workspace -mindepth 1 -maxdepth 1 -exec rm -rf {} + \\
    && (shopt -s dotglob 2>/dev/null || true) && cp -a /tmp/kortix-warm-repo/. /workspace/ \\
    && rm -rf /tmp/kortix-warm-repo \\
    && git -C /workspace remote set-url origin 'https://kortix.example.com/v1/git/proj.git' \\
    && echo "warm-repo: baked $(git -C /workspace rev-parse HEAD) on main"

COPY --chown=kortix:kortix kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup instance keep; rm -f /tmp/kortix-opencode-warmup

"
`;
